--- a/SportUp/EventInfoViewController.storyboard
+++ b/SportUp/EventInfoViewController.storyboard
@@ -342,8 +342,12 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="222"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" verticalHuggingPriority="251" image="iconPlayersGray" translatesAutoresizingMaskIntoConstraints="NO" id="534-Fd-cus">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" image="iconPlayersGray" translatesAutoresizingMaskIntoConstraints="NO" id="534-Fd-cus">
                                                     <rect key="frame" x="16" y="24" width="24" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="24" id="Q06-uF-cwG"/>
+                                                        <constraint firstAttribute="width" constant="24" id="scJ-Op-QjZ"/>
+                                                    </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Описание" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZPm-A4-vsB">
                                                     <rect key="frame" x="56" y="26" width="76" height="20"/>
