--- a/SportUp/UserProfileViewController.storyboard
+++ b/SportUp/UserProfileViewController.storyboard
@@ -25,18 +25,6 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="szR-ex-wvC">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qza-Q2-TvY" customClass="AvatarImageView" customModule="AvatarImageView">
-                                        <rect key="frame" x="16" y="20" width="60" height="60"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="60" id="a6v-O7-uGa"/>
-                                            <constraint firstAttribute="height" constant="60" id="yw5-NJ-u68"/>
-                                        </constraints>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                <real key="value" value="30"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
-                                    </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="iO7-ji-pp2">
                                         <rect key="frame" x="96" y="25" width="263" height="50"/>
                                         <subviews>
@@ -174,15 +162,23 @@
                                             <constraint firstAttribute="height" constant="50" id="tqF-QS-I2U"/>
                                         </constraints>
                                     </stackView>
+                                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zdm-gz-ALT">
+                                        <rect key="frame" x="16" y="20" width="60" height="60"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="1wC-Q6-hSO"/>
+                                            <constraint firstAttribute="width" constant="60" id="2RJ-JR-EJi"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="iO7-ji-pp2" firstAttribute="leading" secondItem="qza-Q2-TvY" secondAttribute="trailing" constant="20" id="BuO-Pf-XJP"/>
+                                    <constraint firstItem="Zdm-gz-ALT" firstAttribute="centerY" secondItem="szR-ex-wvC" secondAttribute="centerY" id="6Cw-Ef-eQq"/>
                                     <constraint firstAttribute="trailing" secondItem="iO7-ji-pp2" secondAttribute="trailing" constant="16" id="Et0-Js-2tR"/>
-                                    <constraint firstItem="qza-Q2-TvY" firstAttribute="leading" secondItem="szR-ex-wvC" secondAttribute="leading" constant="16" id="GlS-GK-7r1"/>
+                                    <constraint firstItem="iO7-ji-pp2" firstAttribute="centerY" secondItem="Zdm-gz-ALT" secondAttribute="centerY" id="M2Q-yZ-fam"/>
+                                    <constraint firstItem="Zdm-gz-ALT" firstAttribute="leading" secondItem="szR-ex-wvC" secondAttribute="leading" constant="16" id="O7E-kT-KXD"/>
                                     <constraint firstAttribute="height" constant="100" id="VAT-HL-YTU"/>
-                                    <constraint firstItem="qza-Q2-TvY" firstAttribute="centerY" secondItem="szR-ex-wvC" secondAttribute="centerY" id="pd3-ld-8Kl"/>
-                                    <constraint firstItem="iO7-ji-pp2" firstAttribute="centerY" secondItem="qza-Q2-TvY" secondAttribute="centerY" id="vqd-WQ-mEV"/>
+                                    <constraint firstItem="iO7-ji-pp2" firstAttribute="leading" secondItem="Zdm-gz-ALT" secondAttribute="trailing" constant="20" id="n1x-6Z-hBL"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="16" sectionFooterHeight="17" translatesAutoresizingMaskIntoConstraints="NO" id="KUW-MU-Mv4">
@@ -213,6 +209,9 @@
                                                     <real key="value" value="24"/>
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
+                                            <connections>
+                                                <action selector="promoCodeButtonDidTap:" destination="1Qe-B8-2jt" eventType="touchUpInside" id="zQ5-N4-A7T"/>
+                                            </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sxe-iT-ZG0">
                                             <rect key="frame" x="72" y="80" width="230" height="48"/>
@@ -405,7 +404,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="avatarView" destination="qza-Q2-TvY" id="oTW-mk-20l"/>
+                        <outlet property="avatarOuterView" destination="Zdm-gz-ALT" id="v1t-tv-14v"/>
                         <outlet property="bestPlayerCountLabel" destination="0Jv-j3-wId" id="YFk-fN-L9j"/>
                         <outlet property="gamesPlayedCountLabel" destination="550-4o-xko" id="9qq-BX-ZjT"/>
                         <outlet property="tableView" destination="KUW-MU-Mv4" id="ttQ-j0-AkV"/>
